<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/leaderboard_user_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start|center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_weight=".2"
        android:textAppearance="?attr/textAppearanceListItem" />

    <ImageView
        android:id="@+id/chat_avatar"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_weight=".3"
        android:contentDescription="@string/title_leaderboard"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/leaderboard_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_weight=".5"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/leaderboard_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_weight=".3"
        android:textAppearance="?attr/textAppearanceListItem" />

</LinearLayout>